--- a/src/app/sites/about/about.component.html
+++ b/src/app/sites/about/about.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="py-5 mt-3">
+<div class="py-5 mt-3 page-container" id="about-container">
 
   <div class="container">
     <div class="row" id="o-studiach-sections">
@@ -21,14 +21,14 @@
 
       <div class="img-section img-section-left">
 
-        
-
         <div class="row">
-          <div class="col-5 animated fadeInLeft" data-wow-delay="0s">
-            <!-- animated -->
+          <!--  wow fadeInLeft -->
+          <div class="col-sm-12 col-md-5" data-wow-delay="0s">
+            <!-- wow -->
             <div class="section-picture img-a-1"></div>
           </div>
-          <div class="col-7 animated fadeIn" data-wow-delay="0s">
+          <!--  wow fadeIn -->
+          <div class="col-sm-12 col-md-7" data-wow-delay="0s">
             <div class="section-text">
               <h2 class="h-article">Adresaci studiów</h2>
 
@@ -57,8 +57,13 @@
       <div class="img-section img-section-right">
 
         <div class="row">
-
-          <div class="col-7 animated fadeIn" data-wow-delay="0s">
+          
+          <!-- fadeInRight -->
+          <div class="col-sm-12 col-md-5 order-sm-1 order-md-12" data-wow-delay="0.3s">
+              <div class="section-picture img-a-2"></div>
+          </div>
+          <!--  fadeIn -->
+          <div class="col-sm-12 col-md-7 order-sm-12 order-md-1" data-wow-delay="0s">
             <div class="section-text">
 
               <h2 class="h-article">Cel kształcenia</h2>
@@ -72,9 +77,7 @@
                 mobilnych.</p>
             </div>
           </div>
-          <div class="col-5 animated fadeInRight" data-wow-delay="0.3s">
-            <div class="section-picture img-a-2"></div>
-          </div>
+          
         </div>
 
       </div>
@@ -82,10 +85,10 @@
       <div class="img-section img-section-left">
 
         <div class="row">
-          <div class="col-5 wow fadeInLeft" data-wow-delay="0.3s">
+          <div class="col-sm-12 col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
             <div class="section-picture img-a-3"></div>
           </div>
-          <div class="col-7 wow fadeIn" data-wow-delay="0.3s">
+          <div class="col-sm-12 col-md-7 wow fadeIn" data-wow-delay="0.3s">
             <div class="section-text">
 
               <h2 class="h-article">Nabywana wiedza</h2>
@@ -141,8 +144,10 @@
       <div class="img-section img-section-right">
 
         <div class="row">
-
-          <div class="col-7 wow fadeIn" data-wow-delay="0.3s">
+          <div class="col-sm-12 col-md-5 order-sm-1 order-md-12 wow fadeInRight" data-wow-delay="0.3s">
+            <div class="section-picture img-a-4"></div>
+          </div>
+          <div class="col-sm-12 col-md-7 order-sm-12 order-md-1 wow fadeIn" data-wow-delay="0.3s">
             <div class="section-text">
 
               <h2 class="h-article">Oferta dodatkowa</h2>
@@ -157,9 +162,7 @@
                 Rzeszowską.</p>
             </div>
           </div>
-          <div class="col-5 wow fadeInRight" data-wow-delay="0.3s">
-            <div class="section-picture img-a-4"></div>
-          </div>
+          
         </div>
 
       </div>
