--- a/src/app/sites/contact/contact.component.html
+++ b/src/app/sites/contact/contact.component.html
@@ -84,19 +84,17 @@
   
         <div class="z-depth-1 radius-25">
             <div class="row adrress no-gutters">
-                <div class="col-md-4 d-flex align-items-center justify-content-center">
+                <div class="col-lg-4 d-flex align-items-center justify-content-center">
                   <!-- <a mdbBtn floating="true" color="blue" class="accent-1 waves-light" mdbWavesEffect> -->
                     <div class="icon">
                         <i class="fa fa-university" aria-hidden="true"></i>
                     </div>
                   <!-- </a> -->
                 </div>
-                <div class="col-md-8 d-flex align-items-center">
-                  <div class="text-left">
+                <div class="col-lg-8">
                     <h5>Politechnika Rzeszowska<br/>im. Ignacego Łukasiewicza</h5>
                     <p>Wydział Elektrotechniki i Informatyki</p>
                     <p>ul. W. Pola 2, 35-959 Rzeszów</p>
-                </div>
                 </div>
             </div>
     
