--- a/src/app/sites/organisation/organisation.component.html
+++ b/src/app/sites/organisation/organisation.component.html
@@ -16,6 +16,7 @@
 
   <div class="container">
     <div class="row">
+      <div class="col-12">
 
       <!-- page content start -->
 
@@ -147,6 +148,7 @@
       <!-- END page content start -->
 
     </div>
+  </div>
   </div>
 
 </div>
