--- a/src/app/sites/study-plan/study-plan.component.html
+++ b/src/app/sites/study-plan/study-plan.component.html
@@ -16,6 +16,7 @@
 
   <div class="container">
     <div class="row">
+      <div class="col-12">
 
       <!-- page content start -->
       <p>Studia podyplomowe "Technologie Internetowe" twają dwa semestry i ogółem ich program zawiera <b>301
@@ -25,167 +26,172 @@
         punktów ETCS. </p>
 
       <h2 class="h-article">Semestr I</h2>
+      <div class="table-responsive">
+        <table mdbTable bordered="true">
+          <thead>
+            <tr>
+              <th scope="col">Przedmiot</th>
+              <th scope="col" class="smaller-col">Wykład</th>
+              <th scope="col" class="smaller-col">Laboratorium</th>
+              <th scope="col" class="smaller-col">Projekt</th>
+              <th scope="col" class="smaller-col">Konsultacje</th>
+              <th scope="col" class="smaller-col">Razem</th>
+              <th scope="col" class="smaller-col">ECTS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr mdbTableCol>
+              <th scope="row">Programowanie obiektowe</th>
+              <td>14</td>
+              <td>14</td>
+              <td>7</td>
+              <td>7</td>
+              <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
+              <td>9</td>
+            </tr>
+            <tr mdbTableCol>
+              <th scope="row">Technologie sieci Web</th>
+              <td>14</td>
+              <td>14</td>
+              <td>7</td>
+              <td>7</td>
+              <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
+              <td>9</td>
+            </tr>
 
-      <table mdbTable bordered="true">
-        <thead>
-          <tr>
-            <th scope="col">Przedmiot</th>
-            <th scope="col" class="smaller-col">Wykład</th>
-            <th scope="col" class="smaller-col">Laboratorium</th>
-            <th scope="col" class="smaller-col">Projekt</th>
-            <th scope="col" class="smaller-col">Konsultacje</th>
-            <th scope="col" class="smaller-col">Razem</th>
-            <th scope="col" class="smaller-col">ECTS</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr mdbTableCol>
-            <th scope="row">Programowanie obiektowe</th>
-            <td>14</td>
-            <td>14</td>
-            <td>7</td>
-            <td>7</td>
-            <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
-            <td>9</td>
-          </tr>
-          <tr mdbTableCol>
-            <th scope="row">Technologie sieci Web</th>
-            <td>14</td>
-            <td>14</td>
-            <td>7</td>
-            <td>7</td>
-            <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
-            <td>9</td>
-          </tr>
+            <tr mdbTableCol>
+              <th scope="row">Projektowanie baz danych</th>
+              <td>14</td>
+              <td>14</td>
+              <td>7</td>
+              <td>7</td>
+              <td>42 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
+              <td>7</td>
+            </tr>
 
-          <tr mdbTableCol>
-            <th scope="row">Projektowanie baz danych</th>
-            <td>14</td>
-            <td>14</td>
-            <td>7</td>
-            <td>7</td>
-            <td>42 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
-            <td>7</td>
-          </tr>
+            <tr mdbTableCol>
+              <th scope="row">Systemy rozproszone</th>
+              <td>14</td>
+              <td>-</td>
+              <td>14</td>
+              <td>-</td>
+              <td>28 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
+              <td>5</td>
+            </tr>
 
-          <tr mdbTableCol>
-            <th scope="row">Systemy rozproszone</th>
-            <td>14</td>
-            <td>-</td>
-            <td>14</td>
-            <td>-</td>
-            <td>28 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
-            <td>5</td>
-          </tr>
+            <tr class="table-summary" mdbTableCol>
+              <th scope="row">Łącznie godzin/punktów</th>
+              <td>56</td>
+              <td>42</td>
+              <td>35</td>
+              <td>21</td>
+              <td>151</td>
+              <td>30</td>
+            </tr>
 
-          <tr class="table-summary" mdbTableCol>
-            <th scope="row">Łącznie godzin/punktów</th>
-            <td>56</td>
-            <td>42</td>
-            <td>35</td>
-            <td>21</td>
-            <td>151</td>
-            <td>30</td>
-          </tr>
-
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
 
       <h2 class="h-article">Semestr II</h2>
 
-      <table mdbTable bordered="true">
-        <thead>
-          <tr>
-            <th scope="col">Przedmiot</th>
-            <th scope="col" class="smaller-col">Wykład</th>
-            <th scope="col" class="smaller-col">Laboratorium</th>
-            <th scope="col" class="smaller-col">Projekt</th>
-            <th scope="col" class="smaller-col">Konsultacje</th>
-            <th scope="col" class="smaller-col">Razem</th>
-            <th scope="col" class="smaller-col">ECTS</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr mdbTableCol>
-            <th scope="row">Programowanie w języku Java
-            </th>
-            <td>14</td>
-            <td>14</td>
-            <td>7</td>
-            <td>7</td>
-            <td>42 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
-            <td>7</td>
-          </tr>
-          <tr mdbTableCol>
-            <th scope="row">Sieci komputerowe
-            </th>
-            <td>14</td>
-            <td>14</td>
-            <td>7</td>
-            <td>7</td>
-            <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
-            <td>9</td>
-          </tr>
+      <div class="table-responsive">
+        <table mdbTable bordered="true">
+          <thead>
+            <tr>
+              <th scope="col">Przedmiot</th>
+              <th scope="col" class="smaller-col">Wykład</th>
+              <th scope="col" class="smaller-col">Laboratorium</th>
+              <th scope="col" class="smaller-col">Projekt</th>
+              <th scope="col" class="smaller-col">Konsultacje</th>
+              <th scope="col" class="smaller-col">Razem</th>
+              <th scope="col" class="smaller-col">ECTS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr mdbTableCol>
+              <th scope="row">Programowanie w języku Java
+              </th>
+              <td>14</td>
+              <td>14</td>
+              <td>7</td>
+              <td>7</td>
+              <td>42 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
+              <td>7</td>
+            </tr>
+            <tr mdbTableCol>
+              <th scope="row">Sieci komputerowe
+              </th>
+              <td>14</td>
+              <td>14</td>
+              <td>7</td>
+              <td>7</td>
+              <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
+              <td>9</td>
+            </tr>
 
-          <tr mdbTableCol>
-            <th scope="row">Aplikacje bazodanowe</th>
-            <td>14</td>
-            <td>14</td>
-            <td>7</td>
-            <td>7</td>
-            <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
-            <td>9</td>
-          </tr>
+            <tr mdbTableCol>
+              <th scope="row">Aplikacje bazodanowe</th>
+              <td>14</td>
+              <td>14</td>
+              <td>7</td>
+              <td>7</td>
+              <td>42 - E <i class="fa fa-info-circle" mdbTooltip="Egzamin" placement="top" aria-hidden="true"></i></td>
+              <td>9</td>
+            </tr>
 
-          <tr mdbTableCol>
-            <th scope="row">Przedmiot obieralny*</th>
-            <td>14</td>
-            <td>7</td>
-            <td>-</td>
-            <td>-</td>
-            <td>21 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
-            <td>5</td>
-          </tr>
+            <tr mdbTableCol>
+              <th scope="row">Przedmiot obieralny*</th>
+              <td>14</td>
+              <td>7</td>
+              <td>-</td>
+              <td>-</td>
+              <td>21 - Z <i class="fa fa-info-circle" mdbTooltip="Zaliczenie" placement="top" aria-hidden="true"></i></td>
+              <td>5</td>
+            </tr>
 
-          <tr class="table-summary" mdbTableCol>
-            <th scope="row">Łącznie godzin/punktów</th>
-            <td>56</td>
-            <td>49</td>
-            <td>21</td>
-            <td>21</td>
-            <td>147</td>
-            <td>30</td>
-          </tr>
+            <tr class="table-summary" mdbTableCol>
+              <th scope="row">Łącznie godzin/punktów</th>
+              <td>56</td>
+              <td>49</td>
+              <td>21</td>
+              <td>21</td>
+              <td>147</td>
+              <td>30</td>
+            </tr>
 
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
 
       <h2 class="h-article">Łącznie</h2>
 
-      <table mdbTable bordered="true">
-        <thead>
-          <tr>
-            <th scope="col">Przedmiot</th>
-            <th scope="col" class="smaller-col">Wykład</th>
-            <th scope="col" class="smaller-col">Laboratorium</th>
-            <th scope="col" class="smaller-col">Projekt</th>
-            <th scope="col" class="smaller-col">Konsultacje</th>
-            <th scope="col" class="smaller-col">Razem</th>
-            <th scope="col" class="smaller-col">ECTS</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="table-summary" mdbTableCol>
-            <th scope="row">Łącznie godzin/punktów</th>
-            <td>112</td>
-            <td>91</td>
-            <td>56</td>
-            <td>42</td>
-            <td>301</td>
-            <td>60</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table mdbTable bordered="true">
+          <thead>
+            <tr>
+              <th scope="col">Przedmiot</th>
+              <th scope="col" class="smaller-col">Wykład</th>
+              <th scope="col" class="smaller-col">Laboratorium</th>
+              <th scope="col" class="smaller-col">Projekt</th>
+              <th scope="col" class="smaller-col">Konsultacje</th>
+              <th scope="col" class="smaller-col">Razem</th>
+              <th scope="col" class="smaller-col">ECTS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="table-summary" mdbTableCol>
+              <th scope="row">Łącznie godzin/punktów</th>
+              <td>112</td>
+              <td>91</td>
+              <td>56</td>
+              <td>42</td>
+              <td>301</td>
+              <td>60</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
       
       <blockquote class="blockquote bq-primary">
@@ -204,6 +210,7 @@
       <!-- END page content start -->
 
     </div>
+  </div>
   </div>
 
 </div>
