--- a/src/app/sites/contact/contact.component.scss
+++ b/src/app/sites/contact/contact.component.scss
@@ -1,3 +1,50 @@
+.adrress {
+    padding: 2em 0 0 0;
+    background-color: rgba(255,255,255,1);
+    text-align: center;
+    margin: 0 0;
+    .icon {
+        font-size: 5em;
+        position: relative;
+        color: rgba(0, 0, 0, 0.35);
+        top: -15px;
+
+    }
+}
+.contact-right-col {
+    margin-top: 1.25em;
+}
+@media (max-width: 575px) {
+}
+  
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .contact-right-col {
+        margin-top: 0;
+    }
+    .adrress {
+        padding: 2em 0 0 0;
+        background-color: rgba(255,255,255,1);
+        text-align: left;
+        margin: 0 0;
+        height: 192px;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    
+}
+
+
 .card {
     box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.02);
     .card-body {
@@ -12,20 +59,7 @@
 .radius-25 {
     border-radius: 0.25rem;
 }
-.adrress {
-    padding: 2em 0 0 0;
-    background-color: rgba(255,255,255,1);
-    text-align: center;
-    margin: 0 0;
-    height: 192px;
-    .icon {
-        font-size: 5em;
-        position: relative;
-        color: rgba(0, 0, 0, 0.35);
-        top: -15px;
 
-    }
-}
 .persons {
 
     p {
