--- a/src/app/sites/recruitment/recruitment.component.html
+++ b/src/app/sites/recruitment/recruitment.component.html
@@ -16,6 +16,7 @@
 
   <div class="container">
     <div class="row">
+      <div class="col-12">
 
       <!-- page content start -->
       <div class="text-section text-section-first">
@@ -228,6 +229,8 @@
       <!-- END page content start -->
 
     </div>
+      
+  </div>
   </div>
 
 </div>
